Adding open graph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet" />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://christhperalta.github.io/GitHub-user-search-app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="GitHub user search app" />
+    <meta
+      property="og:description"
+      content="This is a solution to the GitHub user search app challenge on Frontend Mentor" />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/hjXJQJs0/github-search-app-min.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="christhperalta.github.io" />
+    <meta
+      property="twitter:url"
+      content="https://christhperalta.github.io/GitHub-user-search-app/" />
+    <meta name="twitter:title" content="GitHub user search app" />
+    <meta
+      name="twitter:description"
+      content="This is a solution to the GitHub user search app challenge on Frontend Mentor" />
+    <meta
+      name="twitter:image"
+      content="https://i.postimg.cc/hjXJQJs0/github-search-app-min.png" />
     <title>GitHub user search app</title>
   </head>
   <body>
